# shot_basketball_detection

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: Untitled-1.ipynb  Untitled-2.ipynb  ball_detection.ipynb  scaler.pkl  to_label.ipynb  train.ipynb
shot_basketball_detection/: __main__.py  angle_calculator.py  ball_detection.py  indetify_hsv.py  pose_estimation.py  shot_predictor.py  teste.py  video_processor.py
